samples/_failures_safe/1761799053_117f02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47b9c022.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_47b9c022.c:172:5: error: expected declaration or statement at end of input
  172 |     printf("---\n");
      |     ^~~~~~
